# rocs

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  Architecture.dox  CHANGELOG  CMakeLists.txt  COPYING  COPYING.1.GPL2  ChangeLog  Changelog  HACKING  HACKING.txt  IDEAS  INSTALL  INSTALL.md  LICENSE  Mainpage.dox  NEWS  README  README.developer  README.developer.md  README.md  README.packager  README.packager.md  TESTING  TESTING.md  TODO  astyle-kdelibs  logging_p.h  org.kde.rocs.appdata.xml  release-plan  rocs.appdata.xml  snapcraft.yaml
App/: CMakeLists.txt  Main.cpp  Messages.sh  rocs.desktop  rocs.kcfg  rocsui.rc  rocsversion.h.cmake
App/Interface/: CodeEditor.cpp  CodeEditor.h  ConfigureDefaultProperties.h  ConfigureDefaultProperties.ui  ConfigureDialog.h  DocumentTypesWidget.cpp  DocumentTypesWidget.h  DocumentTypesWidget.ui  DocumentationWidget.h  ImporterExporterManager.h  IncludeManagerSettings.h  JournalEditorWidget.cpp  JournalEditorWidget.h  JournalEditorWidget.ui  MainWindow.cpp  MainWindow.h  PossibleIncludes.h  ScriptOutputWidget.cpp  ScriptOutputWidget.h  ScriptOutputWidget.ui  Separator.h  SideDockWidget.cpp  SideDockWidget.h
App/InterfacePlugins/: CMakeLists.txt
App/Interfaces/: CMakeLists.txt  ConsoleInterface.cpp  ConsoleInterface.h
App/Scripts/: NameAndNodes.js  NamesValues.js  broadWalk.js
App/Tests/: CMakeLists.txt  TestDataStructure.cpp  TestDataStructure.h  TestDynamicProperties.cpp  TestIncludeManager.cpp  TestLoadSave.cpp  TestPlugins.cpp
App/Ui/: CodeEditor.cpp  CodeEditor.h  ConfigureDefaultProperties.cpp  ConfigureDefaultProperties.h  DocumentTypesWidget.cpp  DocumentTypesWidget.h  DocumentTypesWidget.ui  DocumentationWidget.cpp  DocumentationWidget.ui  ImporterExporterManager.cpp  ImporterExporterManager.h  IncludeManagerSettings.cpp  JournalEditorWidget.cpp  LoadedPluginsDialog.cpp  LoadedPluginsDialog.h  MainWindow.cpp  MainWindow.h  PossibleIncludes.cpp  ScriptOutputWidget.cpp  ScriptOutputWidget.h  ScriptOutputWidget.ui  SideDockWidget.cpp  SideDockWidget.h  TabWidget.cpp  TabWidget.h
App/UndoRedo/: URAddEdge.cpp  URAddNode.h  UndoChangeProperty.cpp
RocsCore/: CMakeLists.txt  ConcurrentHelpClasses.h  CoreTypes.h  Data.cpp  Data.h  Data.xml  DataStructure.cpp  DataStructure.h  DataStructure.xml  DataStructureBackendInterface.cpp  DataStructureBackendInterface.h  DataStructureBackendManager.cpp  DataStructureBackendManager.h  DataStructurePluginInterface.cpp  DataStructurePluginInterface.h  DataStructurePluginManager.cpp  DataStructurePluginManager.h  DataType.cpp  DataType.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  DynamicPropertiesList.h  Group.cpp  Group.h  IncludeManager.cpp  IncludeManager.h  KrossBackend.h  Mainpage.dox  Messages.sh  Pointer.cpp  Pointer.h  Pointer.xml  PointerType.cpp  PointerType.h  Project.cpp  Project.h  QtScriptBackend.cpp  QtScriptBackend.h  (+2 more)
RocsCore/DataStructures/: CMakeLists.txt
RocsCore/EngineModules/: CMakeLists.txt  engineApi.xsd
RocsCore/LoadSave/: CMakeLists.txt  GraphFileBackendManager.cpp  GraphFilePluginInterface.cpp  GraphFilePluginInterface.h  RocsGraphFileFormatPlugin.cpp  RocsGraphFileFormatPlugin.h  RocsGraphFilePlugin.desktop
RocsCore/Modifiers/: Topology.cpp  Topology.h  ValueModifier.cpp  ValueModifier.h
RocsCore/Plugins/: PluginManager.cpp  PluginManager.h
RocsCore/Tests/: CMakeLists.txt  TestDataStructure.cpp  TestDataStructure.h  TestDynamicProperties.cpp  TestDynamicProperties.h  TestLoadSave.cpp  TestLoadSave.h  TestPlugins.cpp  TestPlugins.h  TestScriptEngine.cpp
VisualEditor/: CMakeLists.txt  GraphVisualEditor.cpp  GraphVisualEditor.h  Mainpage.dox  Messages.sh  VisualEditorExport.h
VisualEditor/Actions/: AbstractAction.cpp  AddConnectionHandAction.cpp  AddConnectionHandAction.h  AddDataAction.cpp  AddDataAction.h  AddDataHandAction.cpp  AddDataHandAction.h  AlignAction.cpp  AlignAction.h  AssignValueAction.cpp  AssignValueAction.h  DeleteAction.cpp  DeleteAction.h  DeleteHandAction.cpp  DeleteHandAction.h  PropertiesDialogAction.cpp  (+5 more)
graphics/: CMakeLists.txt  hisc-action-rocsadddata.svgz  hisc-action-rocsadvancedsetup.svgz  hisc-action-rocsdelete.svgz  hisc-action-rocsdeletedata.svgz  hisc-action-rocsdeletegrey.svgz  hisc-action-rocsnew.svgz  hisc-action-rocstexticon.svgz  hisc-action-rocsvalueicon.svgz
libgraphtheory/: CMakeLists.txt  Messages.sh  edge.cpp  edge.h  edgetype.cpp  edgetype.h  edgetypestyle.cpp  edgetypestyle.h  editor.cpp  editor.h  graphdocument.cpp  graphdocument.h  libgraphtheoryexport.h  logging.cpp  logging_p.h  node.cpp  node.h  nodetype.cpp  nodetype.h  nodetypestyle.cpp  nodetypestyle.h  typenames.h  view.cpp  view.h
src/: .directory  CMakeLists.txt  DiagramEdge.cpp  DiagramEdge.h  DiagramNode.cpp  DiagramNode.h  DiagramScene.cpp  DiagramScene.h  Examples.js  GraphEditWidget.ui  GraphEngine.cpp  GraphEngine.h  GraphLayersDockWidget.ui  GraphScript.js  Group.cpp  Group.h  Main.cpp  MainWindow.h  Mainpage.dox  Messages.sh  Rocs.desktop  Rocs.kcfg  Rocsui.rc  TODO  UI_ConfigureDialog.h  UI_FileArea.cpp  UI_FileArea.h  UI_GraphEditWidget.cpp  UI_GraphEditWidget.h  UI_GraphLayers.cpp  UI_GraphLayers.h  UI_GraphLayersDockWidget.cpp  UI_GraphLayersDockWidget.h  UI_GraphScene.cpp  UI_GraphScene.h  UI_MainWindow.cpp  UI_MainWindow.h  UI_OpenedFilesDockWidget.cpp  UI_OpenedFilesDockWidget.h  UI_PaletteBar.cpp  (+57 more)
src-rewrite/: AbstractAction.cpp  AbstractAction.h  AddNodeAction.cpp  AddNodeAction.h  CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphCollection.cpp  GraphCollection.h  Main.cpp  Node.cpp  Node.h  Rocs.desktop  Rocs.kcfg  Rocsui.rc  UI_ConfigureDialog.cpp  UI_ConfigureDialog.h  UI_Edge.cpp  UI_Edge.h  UI_FileArea.cpp  UI_FileArea.h  UI_Graph.cpp  UI_Graph.h  UI_GraphLayers.cpp  UI_GraphLayers.h  UI_GraphScene.cpp  UI_GraphScene.h  UI_MainWindow.cpp  UI_MainWindow.h  UI_Node.cpp  UI_Node.h  UI_PaletteBar.cpp  UI_PaletteBar.h  UI_PaletteLayout.cpp  UI_PaletteLayout.h  UI_PaletteScrollArea.cpp  UI_PaletteScrollArea.h  UI_PropertiesArea.cpp  (+7 more)
(+1674 files in other folders)
