install( 
  FILES 
    # Toolbar Icons
    rocs-add-node16.png
    rocs-add-node32.png
    rocs-add-node64.png

    rocs-move-node16.png
    rocs-move-node32.png
    rocs-move-node-64.png

    rocs-delete16.png
    rocs-delete32.png
    rocs-delete64.png

    rocs-add-edge16.png
    rocs-add-edge32.png
    rocs-add-edge64.png

    rocs-select16.png
    rocs-select32.png
    rocs-select64.png

    # alligns Horizontal
    rocs-allign-bottom16.png
    rocs-allign-bottom32.png
    rocs-allign-bottom64.png

    rocs-allign-hmiddle16.png
    rocs-allign-hmiddle32.png
    rocs-allign-hmiddle64.png

    rocs-allign-top16.png
    rocs-allign-top32.png
    rocs-allign-top64.png

  #alligns Vertical
    rocs-allign-left16.png
    rocs-allign-left32.png
    rocs-allign-left64.png

    rocs-allign-vcenter16.png
    rocs-allign-vcenter32.png
    rocs-allign-vcenter64.png

    rocs-allign-right16.png
    rocs-allign-right32.png
    rocs-allign-right64.png

  DESTINATION 
    ${DATA_INSTALL_DIR}/rocs/icons 
)